--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,5 +10,10 @@
     <body>
         <h1>Diablo Class Finder</h1>
         <h4>Feeling confused on how to fight the minions of hell? Let us help!</h4>
+        <a class="button" href="/survey.html">Begin</a>
+        
+        
+        <script type="text/javascript">
+        </script>
     </body>
 </html>
