--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,5 +9,12 @@
     
     <body>
         <h3>Survey</h3>
+
+        <div class="form">
+            <form>
+                <label for="user-name">Name:</label>
+                <input type="text" name="user-name" id="name-input">
+            </form>
+        </div>
     </body>
 </html>
