api displays data

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Diablo Class Finder</h1>
         <h4>Feeling confused on how to fight the minions of hell? Let us help!</h4>
-        <a class="button" href="/survey.html">Begin</a>
+        <a class="button" href="/survey">Begin</a>
         
         
         <script type="text/javascript">
