server returns array of score differences

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="q1">Question1</label>
+                    <label for="q1">Question 1:</label>
                     <p>You like to bash demons up close and personal:</p>
                     <select class="form-control" id="q1">
                         <option value="1">Strong Disagree</option>
@@ -36,7 +36,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="q2">You plow throw enemies with spells:</label>
+                    <label for="q2">Question 2:</label>
+                    <p>You plow throw enemies with spells:</p>
                     <select class="form-control" id="q2">
                         <option value="1">Strong Disagree</option>
                         <option value="2">Disagree</option>
@@ -47,7 +48,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="q3">You believe in fighting with honor:</label>
+                    <label for="q3">Question 3:</label>
+                    <p>You believe in fighting with honor:</p>
                     <select class="form-control" id="q3">
                         <option value="1">Strong Disagree</option>
                         <option value="2">Disagree</option>
@@ -58,7 +60,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="q4">You prefer to fight with your fists:</label>
+                    <label for="q4">Question 4:</label>
+                    <p>You prefer to fight with your fists:</p>
                     <select class="form-control" id="q4">
                         <option value="1">Strong Disagree</option>
                         <option value="2">Disagree</option>
@@ -68,7 +71,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="q5">You're into voodoo and other weird stuff:</label>
+                    <label for="q5">Question 5:</label>
+                    <p>You're into voodoo and other weird stuff:</p>
                     <select class="form-control" id="q5">
                         <option value="1">Strong Disagree</option>
                         <option value="2">Disagree</option>
@@ -78,7 +82,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="q6">You like raising the dead</label>
+                    <label for="q6">Question 6:</label>
+                    <p>You like raising the dead</p>
                     <select class="form-control" id="q6">
                         <option value="1">Strong Disagree</option>
                         <option value="2">Disagree</option>
@@ -88,7 +93,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="q7">You like to aid allies with support</label>
+                    <label for="q7">Question 7:</label>
+                    <p>You like to aid allies with support</p>
                     <select class="form-control" id="q7">
                         <option value="1">Strong Disagree</option>
                         <option value="2">Disagree</option>
@@ -98,7 +104,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="q8">You like being the center of attention</label>
+                    <label for="q8">Question 8:</label>
+                    <p>You like being the center of attention</p>
                     <select class="form-control" id="q8">
                         <option value="1">Strong Disagree</option>
                         <option value="2">Disagree</option>
@@ -108,7 +115,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="q9">You prefer to be quick and light on your feet</label>
+                    <label for="q9">Question 9:</label>
+                    <p>You prefer to be quick and light on your feet</p>
                     <select class="form-control" id="q9">
                         <option value="1">Strong Disagree</option>
                         <option value="2">Disagree</option>
@@ -118,7 +126,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="q10">You like to shoot things</label>
+                    <label for="q10">Question 10:</label>
+                    <p>You like to shoot things</p>
                     <select class="form-control" id="q10">
                         <option value="1">Strong Disagree</option>
                         <option value="2">Disagree</option>
