--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -137,7 +137,7 @@
                     </select>
                 </div>
 
-                <button class="btn btn-primary" type="submit">Submit</button>
+                <button class="btn btn-primary mb-5" type="submit">Submit</button>
         </div>
     </main>
 
@@ -164,9 +164,11 @@
                 data:data
             })
             .then(response=>{
-                console.log(response);
+                console.log(`Returned: ${JSON.stringify(response)}`);
             })
             .done(err=>{if(err) throw err});
+
+            // displayMatch(index)
         })
     </script>
 </body>
