added img url to class data, survey page displays simple html for results

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -165,10 +165,21 @@
             })
             .then(response=>{
                 console.log(`Returned: ${JSON.stringify(response)}`);
+
+                displayMatch(response);
             })
             .done(err=>{if(err) throw err});
 
-            // displayMatch(index)
+            function displayMatch(matchData){
+                
+                const matchDiv = $(`<div class="match">`);
+                    matchDiv.html(`
+                    <p>Match: ${matchData.name}</p>
+                    <img src=${matchData.img} alt='${matchData.name}'>
+                    `);
+
+                $('.container').append(matchDiv);
+            }
         })
     </script>
 </body>
