--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,6 +10,8 @@
         crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -172,13 +174,37 @@
 
             function displayMatch(matchData){
                 
-                const matchDiv = $(`<div class="match">`);
-                    matchDiv.html(`
-                    <p>Match: ${matchData.name}</p>
-                    <img src=${matchData.img} alt='${matchData.name}'>
-                    `);
+                // const matchDiv = $(`<div class="match">`);
+                //     matchDiv.html(`
+                //     <p>Match: ${matchData.name}</p>
+                //     <img src=${matchData.img} alt='${matchData.name}'>
+                //     `);
 
-                $('.container').append(matchDiv);
+                // $('.container').append(matchDiv);
+
+                let newModal = $(`<div id="match-modal" class="modal" tabindex="-1" role="dialog">`);
+                    newModal.html(`
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Your chosen match:</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>The ${matchData.name}</p>
+                            <img src=${matchData.img} alt=${matchData.name}>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                        </div>
+                    </div>
+            `)
+
+            $('.container').append(newModal);
+            $('#match-modal').modal('show');
             }
         })
     </script>
