styled home.html

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Diablo Class Finder</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
         <link rel="stylesheet" href="./home.css">
     </head>
     
@@ -15,9 +16,10 @@
             <div class="container text-center">
                 <div class="jumbotron">
                     <h1>Diablo Class Finder</h1>
+                    <hr>
                 </div>
-                <h4>Feeling confused on how to fight the minions of hell? Let us help!</h4>
-                <a class="btn btn-primary mt-3" href="/survey">Begin</a>
+                <h3>Feeling confused on how to fight the minions of hell? Let us help!</h3>
+                <a class="btn btn-danger mt-3" href="/survey">Begin</a>
             </div>
         </main>
     </body>
