--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -183,9 +183,6 @@
                         <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title">Your chosen match:</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                            </button>
                         </div>
                         <div class="modal-body">
                             <p>The ${matchData.name}</p>
@@ -200,7 +197,10 @@
 
             $('#match').append(newModal);
             $('#match-modal').modal('show');
+            $('#match-modal').on("hidden.bs.modal",()=>window.location.reload(true));
             }
+            
+            
         })
     </script>
 </body>
